[package]
name = "airkorea"
version = "0.4.0"
authors = ["pbzweihander <sd852456@naver.com>"]
description = "Limitless Airkorea API wrapper"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/airkorea/"
repository = "https://github.com/pbzweihander/airkorea-rs"
readme = "README.md"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
failure = "0.1.5"
scraper = "0.9.2"
regex = "1.1.2"
futures = "0.1.25"
reqwest = "0.9.12"

[dev-dependencies]
tokio = "0.1.18"
