[package]
name = "hjson2json"
version = "0.1.0"
authors = ["pbzweihander <sd852456@naver.com>"]
description = "Json wrapper for deprecated Hjson"
license = "MIT/Apache-2.0"
repository = "https://github.com/pbzweihander/airkorea-rs"

[dependencies]
serde = "0.8"
serde-hjson = "0.8"
serde_json = "0.8"
error-chain = "0.11"
